force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/SeniorUHGExecutivesEngaged__c.object-meta.xml
<CustomObject>
    <label>Senior UHG Executives Engaged</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Senior UHG Executives Engaged</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>