force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Company/Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Senior UHG Executives Engages</relationshipLabel>
    <relationshipName>Senior_UHG_Executives_Engages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>