force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/EnterpriseExecutiveSponsorName__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseExecutiveSponsorName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enterprise Executive Sponsor Name</label>
    <type>TextArea</type>
</CustomField>