force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/EnterpriseExecutiveSponsorNameOther__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseExecutiveSponsorNameOther__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enterprise Executive Sponsor Name Other</label>
    <length>40</length>
    <type>Text</type>
</CustomField>