force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/EnterpriseExecutiveSponsorResponsibiliti__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseExecutiveSponsorResponsibiliti__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enterprise Executive Sponsor Responsibil</label>
    <type>TextArea</type>
</CustomField>