force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>