force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/OptumExecutiveSponsorName__c.field-meta.xml
<CustomField>
    <fullName>OptumExecutiveSponsorName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Optum Executive Sponsor Name</label>
    <type>TextArea</type>
</CustomField>