force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/OptumExecutiveSponsorNameOther__c.field-meta.xml
<CustomField>
    <fullName>OptumExecutiveSponsorNameOther__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Optum Executive Sponsor Name Other</label>
    <length>40</length>
    <type>Text</type>
</CustomField>