force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/OptumExecutiveSponsorResponsibilities__c.field-meta.xml
<CustomField>
    <fullName>OptumExecutiveSponsorResponsibilities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Optum Executive Sponsor Responsibilities</label>
    <type>TextArea</type>
</CustomField>