force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/OtherExecutiveName1__c.field-meta.xml
<CustomField>
    <fullName>OtherExecutiveName1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Executive Name 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>