force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/OtherExecutiveName2__c.field-meta.xml
<CustomField>
    <fullName>OtherExecutiveName2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Executive Name 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>