force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/OtherExecutiveName3__c.field-meta.xml
<CustomField>
    <fullName>OtherExecutiveName3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Executive Name 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>