force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/OtherExecutiveResponsibilities1__c.field-meta.xml
<CustomField>
    <fullName>OtherExecutiveResponsibilities1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Executive Responsibilities 1</label>
    <type>TextArea</type>
</CustomField>