force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/OtherExecutiveResponsibilities2__c.field-meta.xml
<CustomField>
    <fullName>OtherExecutiveResponsibilities2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Executive Responsibilities 2</label>
    <type>TextArea</type>
</CustomField>