force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/OtherExecutiveResponsibilities3__c.field-meta.xml
<CustomField>
    <fullName>OtherExecutiveResponsibilities3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Executive Responsibilities 3</label>
    <type>TextArea</type>
</CustomField>