force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/OtherExecutiveTitle1__c.field-meta.xml
<CustomField>
    <fullName>OtherExecutiveTitle1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Executive Title 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>