force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/OtherExecutiveTitle2__c.field-meta.xml
<CustomField>
    <fullName>OtherExecutiveTitle2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Executive Title 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>