force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/OtherExecutiveTitle3__c.field-meta.xml
<CustomField>
    <fullName>OtherExecutiveTitle3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Executive Title 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>