force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/Surest_Executive_Sponsor_Name_Other__c.field-meta.xml
<CustomField>
    <fullName>Surest_Executive_Sponsor_Name_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Executive Sponsor Name Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>