force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/SurestExecutiveSponsorName__c.field-meta.xml
<CustomField>
    <fullName>SurestExecutiveSponsorName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Executive Sponsor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>