force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/SurestExecutiveSponsorResponsibilities__c.field-meta.xml
<CustomField>
    <fullName>SurestExecutiveSponsorResponsibilities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Executive Sponsor Responsibilites</label>
    <length>255</length>
    <type>Text</type>
</CustomField>