force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/UHCExecutiveSponsorName__c.field-meta.xml
<CustomField>
    <fullName>UHCExecutiveSponsorName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHC Executive Sponsor Name</label>
    <type>TextArea</type>
</CustomField>