force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/UHCExecutiveSponsorNameOther__c.field-meta.xml
<CustomField>
    <fullName>UHCExecutiveSponsorNameOther__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHC Executive Sponsor Name Other</label>
    <length>40</length>
    <type>Text</type>
</CustomField>