force-app/main/default/objects/SeniorUHGExecutivesEngaged__c/fields/UHCExecutiveSponsorResponsibilities__c.field-meta.xml
<CustomField>
    <fullName>UHCExecutiveSponsorResponsibilities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHC Executive Sponsor Responsibilities</label>
    <type>TextArea</type>
</CustomField>